@@ -7,6 +7,7 @@ $URL$
 
 2014-03-13 Jens Maus <mail@jens-maus.de>
 
+  * src/amissl_library.c: slightly improved the multithreading locking mechanism.
   * src/amissl_library.c: removed the restrictions of the IDEA and MDC2 cipher due
     to patents being in place. In fact, the IDEA patent lasted only till 2012
     (see http://en.wikipedia.org/wiki/International_Data_Encryption_Algorithm) and
